<resources>
    <string name="app_name">StudyPlanner</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="home">Home</string>
    <string name="click_to_add_photo">Click to Add Photo</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="photo">Photo</string>
    <string name="finished">Finished</string>
    <string name="in_progress">In Progress</string>
    <string name="not_started">Not Started</string>
    <string name="status">Status</string>
    <string name="enter_materials_needed">Enter materials needed</string>
    <string name="materials_needed">Materials Needed</string>
    <string name="enter_objective">Enter objective</string>
    <string name="objective">Objective</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="study_task_name">Study / Task Name</string>
    <string name="hh_mm">HH:MM</string>
    <string name="until">Until</string>
    <string name="time_range">Time Range</string>
    <string name="other">Other</string>
    <string name="exam_study">Exam Study</string>
    <string name="task">Task</string>
    <string name="homework">Homework</string>
    <string name="category">Category</string>
    <string name="enter_date_yyyy_mm_dd">(YYYY-MM-DD)</string>
    <string name="date">Date</string>
    <string name="add_a_study_plan">Add a Study Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_status">Task Status</string>
    <string name="materials">Materials</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="_8_tasks"> </string>
    <string name="never_gonna_give_the_assignments_up">Never gonna give the assignments up 😭</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="date_home">Date</string>
    <string name="time_home">Time</string>
    <string name="_00_00">00:00</string>
    <string name="_01_00">01:00</string>
    <string name="_02_00">02:00</string>
    <string name="_03_00">03:00</string>
    <string name="_04_00">04:00</string>
    <string name="_05_00">05:00</string>
    <string name="_06_00">06:00</string>
    <string name="_07_00">07:00</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="_23_00">23:00</string>
    <string name="_24_00">24:00</string>
    <string name="good_morning_user"> </string>
    <string name="add_category">Add Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="pick_color">Pick Color</string>
    <string name="save_category">Save Category</string>
    <string name="your_categories">Your Categories</string>
    <string name="open_camera">Open Camera</string>
    <string name="edit_name">Edit name</string>
    <string name="e_mail_icon">e-mail icon</string>
    <string name="password_icon">password icon</string>
    <string name="masked_password">***********</string>
    <string name="edit_password">Edit password</string>
    <string name="logout">Logout</string>
    <string name="app_icon">app icon</string>
    <string name="unselected_bullet">unselected bullet</string>
    <string name="selected_bullet">selected bullet</string>
    <string name="plus_button">plus button</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="add_category_button">Add Category Button</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="my_schedules">My Schedules</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="select_category">Select Category</string>
    <string name="category_name">Category Name</string>
    <string name="item_color">item color</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_button">Delete Button</string>
</resources>