<!-- dialog_edit_name.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp" />

    <!-- Edit Text for Name -->
    <EditText
        android:id="@+id/edit_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="New Name"
        android:hint="@string/enter_new_name"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginBottom="16dp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:background="@drawable/button_danger"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@drawable/button_blue" />
    </LinearLayout>
</LinearLayout>
