<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center_horizontal">

    <!-- Wrap viewBackground and imageView8 in a FrameLayout -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <View
            android:id="@+id/viewBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/curve_shape" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/circle_shape"
            android:scaleType="centerCrop" />

        <!-- Tambahkan tombol kamera -->
        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="130dp"
            android:src="@drawable/ic_edit"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/open_camera"/>
            <!--android:src="@drawable/ic_camera"-->
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/edit_name_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/edit_name"
            app:srcCompat="@drawable/ic_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_details_form"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="35dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/form_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageView
                android:id="@+id/profile_email_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/e_mail_icon"
                app:srcCompat="@drawable/mail" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:layout_gravity="center_vertical"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg_for_textview"
                    android:text="@string/e_mail"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageView
                android:id="@+id/profile_password_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/password_icon"
                app:srcCompat="@drawable/retry" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:paddingStart="15dp"
                android:layout_gravity="center_vertical"
                android:paddingEnd="0dp">

                <!-- Password TextView -->
                <TextView
                    android:id="@+id/profile_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg_for_textview"
                    android:text="@string/masked_password"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"/>

                <!-- Edit password icon -->
                <ImageView
                    android:id="@+id/edit_password_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/edit_password"
                    app:srcCompat="@drawable/ic_edit" />
            </FrameLayout>
        </LinearLayout>

        <!-- Logout Button -->
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/logout"
            android:backgroundTint="@color/black" />
    </LinearLayout>
</LinearLayout>
